--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,42 +45,18 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python ${{ matrix.python-version }}
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Hatch
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: pip install --upgrade hatch
 
       - name: Run tests
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: hatch run test
-
-      # # See https://github.com/actions/setup-python/blob/main/docs/advanced-usage.md#caching-packages
-      # # for authoritative source on how to install and cache poetry
-      # - name: Install poetry
-      #   if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-      #   run: pipx install poetry
-
-      # - name: Set up python ${{ matrix.python-version }}
-      #   if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-      #   uses: actions/setup-python@v4
-      #   with:
-      #     python-version: ${{ matrix.python-version }}
-      #     cache: 'poetry'
-
-      # - name: Build and install with poetry
-      #   if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-      #   shell: bash
-      #   run: |
-      #     poetry run python -m pip install --upgrade pip
-      #     poetry env info
-      #     poetry install --no-interaction --with test
-
-      # - name: Run tests
-      #   if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-      #   shell: bash
-      #   run: |
-      #     poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0
 
       - name: Upload coverage
         if: "matrix.python-version == '3.11' && matrix.os == 'ubuntu-latest'"
@@ -107,27 +83,6 @@ jobs:
 
       - name: Install Hatch
         run: pip install --upgrade hatch
-
-      # - name: Install poetry
-      #   run: pipx install poetry
-
-      # - name: Set up python 3.11
-      #   uses: actions/setup-python@v4
-      #   with:
-      #     python-version: '3.11'
-      #     cache: 'poetry'
-
-      # - name: Install toml
-      #   shell: bash
-      #   run: |
-      #     python -m pip install --upgrade pip toml
-
-      # - name: Build and install with poetry
-      #   shell: bash
-      #   run: |
-      #     poetry run python -m pip install --upgrade pip
-      #     poetry env info
-      #     poetry install --no-interaction
 
       - name: Bump version
         shell: bash
@@ -186,7 +141,6 @@ jobs:
         env:
           # 1) Get key from https://pypi.org/manage/account/token/
           # 2) Copy it to Github > repo > Settings > Secrets
-          # POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
           HATCH_INDEX_USER: __token__
           HATCH_INDEX_AUTH: ${{ secrets.PYPI_TOKEN }}
         shell: bash
