--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,10 +29,7 @@ dependencies = [
   "tqdm >=4.63.1",
   "pytz >=2020.1",
   "urllib3 >=1.25.10",
-  "pandas >=1.1.2",
-  "pylatexenc >=2.7",
-  "feedparser >=6.0.1",
-  "caltechdata-api >=0.3.0"
+  "pandas >=1.1.2"
 ]
 
 [project.optional-dependencies]
