--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,11 +58,11 @@ jobs:
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: hatch run test
 
-      # - name: Upload coverage
-      #   if: "matrix.python-version == '3.12' && matrix.os == 'ubuntu-latest'"
-      #   uses: codecov/codecov-action@v4
-      #   with:
-      #     token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload coverage
+        if: "matrix.python-version == '3.12' && matrix.os == 'ubuntu-latest'"
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
 
   release:
