--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ ecosystem = [
   "line_profiler >=3.0.2",
   "memory_profiler >=0.57.0",
   "matplotlib >=2.1.1",
+  "numpy >=1.20, <2.0",
   "sympy >=1.6.2",
   "corner >=2.1.0",
   "qgrid >=1.3.1",
@@ -75,7 +76,8 @@ dependencies = [
   "pytest",
   "pytest-cov",
   "pytest-forked >=1.3.0",
-  "juliapkg >=0.1.13"
+  "juliapkg >=0.1.13",
+  "numpy >=1.20, <2.0"
 ]
 [tool.hatch.envs.default.scripts]
 # Run these as `hatch run test`
