--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Install Hatch
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-        run: pip install --upgrade hatch
+        run: python -m pip install --disable-pip-version-check --upgrade hatch
 
       - name: Run tests
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
@@ -85,7 +85,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Hatch
-        run: pip install --upgrade hatch
+        run: python -m pip install --disable-pip-version-check --upgrade hatch
 
       - name: Bump version
         shell: bash
