--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,13 @@ jobs:
         run: |
           echo "skipping_build_and_test_replicate=${skip_replicates}" >> $GITHUB_ENV
 
+      - name: Cache sxs file storage
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.sxs
+
       - name: Check out code
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/checkout@v4
