--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/cache@v4
         with:
+          key: sxs-${{ runner.os }}
           path: |
             ~/.sxs
 
