--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,9 +44,12 @@ jobs:
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/cache@v4
         with:
-          key: sxs-${{ runner.os }}
+          key: sxs-${{ runner.os }}-python${{ matrix.python-version }}
           path: |
             ~/.sxs
+          restore-keys: |
+            sxs-${{ runner.os }}-
+            sxs-
 
       - name: Check out code
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
