--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,14 @@ jobs:
             sxs-${{ runner.os }}-
             sxs-
 
+      - name: Set up Julia
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        uses: julia-actions/setup-julia@v2
+
+      - name: Cache Julia
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+        uses: julia-actions/cache@v2
+
       - name: Check out code
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/checkout@v4
