--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,10 +98,10 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.13'
 
       - name: Install Hatch
         run: python -m pip install --disable-pip-version-check --upgrade hatch
