--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,12 +47,10 @@ jobs:
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/cache@v4
         with:
-          key: sxs-${{ runner.os }}-python${{ matrix.python-version }}
+          key: sxs-${{ runner.os }}-1 # Increment this number whenever the cached files should change
           path: |
-            ~/.sxs
-          restore-keys: |
-            sxs-${{ runner.os }}-
-            sxs-
+            ~/.sxs/cache  # for macos and windows
+            ~/.cache/sxs/cache  # for linux
 
       - name: Set up Julia
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
