--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,8 +49,8 @@ jobs:
         with:
           key: sxs-${{ runner.os }}-1 # Increment this number whenever the cached files should change
           path: |
-            ~/.sxs/cache  # for macos and windows
-            ~/.cache/sxs/cache  # for linux
+            ${{ env.HOME }}/.sxs/cache  # for macOS and Windows
+            ${{ env.HOME }}/.cache/sxs/cache  # for Linux
 
       - name: Set up Julia
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
