--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,8 +49,7 @@ jobs:
         with:
           key: sxs-${{ runner.os }}-1 # Increment this number whenever the cached files should change
           path: |
-            ${{ env.HOME }}/.sxs/cache  # for macOS and Windows
-            ${{ env.HOME }}/.cache/sxs/cache  # for Linux
+              ${{ runner.os == 'Linux' && env.HOME + '/.cache/sxs/cache' || env.HOME + '/.sxs/cache' }}
 
       - name: Set up Julia
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
@@ -76,7 +75,13 @@ jobs:
 
       - name: Run tests
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-        run: hatch run test
+        shell: bash
+        run: |
+          ls "${{ env.HOME }}/.sxs/cache/**" || true
+          ls "${{ env.HOME }}/.cache/sxs/cache/**" || true
+          hatch run test
+          ls "${{ env.HOME }}/.sxs/cache/**" || true
+          ls "${{ env.HOME }}/.cache/sxs/cache/**" || true
 
       - name: Upload coverage
         if: "matrix.python-version == '3.13' && matrix.os == 'ubuntu-latest'"
