--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           key: sxs-${{ runner.os }}-1 # Increment this number whenever the cached files should change
           path: |
-              ${{ runner.os == 'Linux' && env.HOME + '/.cache/sxs/cache' || env.HOME + '/.sxs/cache' }}
+          ${{ runner.os == 'Linux' && format('{0}/.cache/sxs/cache', env.HOME) || format('{0}/.sxs/cache', env.HOME) }}
 
       - name: Set up Julia
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
