--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,8 @@ jobs:
       - name: Cache Julia
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: julia-actions/cache@v2
+        with:
+          include-matrix: false
 
       - name: Check out code
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
