--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dependencies = [
   "pytz >=2020.1",
   "urllib3 >=1.25.10",
   "pandas >=1.1.2",
-  "juliacall >=0.9.20"
+  "juliacall >=0.9.20",
+  "astropy >=7.0.0",
 ]
 
 [project.optional-dependencies]
