--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
   "urllib3 >=1.25.10",
   "pandas >=1.1.2",
   "juliacall >=0.9.20",
+  "packaging",
 ]
 
 [project.optional-dependencies]
