--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,8 @@ jobs:
           - os: macos-latest
             python-version: '3.13'
         include:
-          - os: macos-12
-            python-version: '3.13'
+          - os: macos-latest
+            python-version: '3.12'
 
     steps:
       - name: Skip replicates unless on main branch or using ubuntu-latest
