--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
   "pytz >=2020.1",
   "urllib3 >=1.25.10",
   "pandas >=1.1.2",
+  "bibtexparser >=2.0.0b8",
   "juliacall >=0.9.20",
   "packaging",
 ]
