--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,6 +83,8 @@ jobs:
       - name: Run tests
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           hatch run test --durations=0
 
