--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,7 @@ jobs:
         uses: julia-actions/cache@v2
         with:
           include-matrix: false
+          cache-name: julia-1-12  # Add a unique suffix to force fresh install
 
       - name: Check out code
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
