--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,15 +30,15 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.10', '3.13']
-        exclude:
-          - os: windows-latest
-            python-version: '3.13'
-          - os: macos-latest
-            python-version: '3.13'
-        include:
-          - os: macos-latest
-            python-version: '3.12'
+        python-version: ['3.10', '3.14']
+        # exclude:
+        #   - os: windows-latest
+        #     python-version: '3.13'
+        #   - os: macos-latest
+        #     python-version: '3.13'
+        # include:
+        #   - os: macos-latest
+        #     python-version: '3.12'
 
     steps:
       - name: Skip replicates unless on main branch or using ubuntu-latest
@@ -90,7 +90,7 @@ jobs:
           hatch run test --durations=0
 
       - name: Upload coverage
-        if: "matrix.python-version == '3.13' && matrix.os == 'ubuntu-latest'"
+        if: "matrix.python-version == '3.14' && matrix.os == 'ubuntu-latest'"
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
@@ -113,7 +113,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: '3.13'
+          python-version: '3.14'
 
       - name: Install Hatch
         run: python -m pip install --disable-pip-version-check --upgrade hatch
