--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,11 @@ jobs:
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: hatch run test --durations=0
+        run: |
+          hatch run python -m pip install pyopenssl>=24.0.0
+          hatch run python -c 'import ssl; print("openssl: ", ssl.OPENSSL_VERSION_INFO)'
+          hatch run python -c 'import numpy; print("numpy: ", numpy.__version__)'
+          hatch run test --durations=0
 
       - name: Upload coverage
         if: "matrix.python-version == '3.13' && matrix.os == 'ubuntu-latest'"
