--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,7 +86,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          hatch run python -m pip install pyopenssl>=24.0.0
+          hatch run pip install pyopenssl>=24.0.0
           hatch run python -c 'import ssl; print("openssl: ", ssl.OPENSSL_VERSION_INFO)'
           hatch run python -c 'import numpy; print("numpy: ", numpy.__version__)'
           hatch run test --durations=0
