--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,12 +85,10 @@ jobs:
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # HATCH_VERBOSE: "2"  # 1 = normal verbose, 2 = very verbose
         run: |
           hatch run pip install pyopenssl>=24.0.0
           hatch run python -c 'import ssl; print("openssl: ", ssl.OPENSSL_VERSION_INFO)'
-          hatch run test -- -k test_waveform_rotations --durations=0 --ignore=tests/test_julia.py
-          #hatch run test --durations=0
+          hatch run test --durations=0
 
       - name: Upload coverage
         if: "matrix.python-version == '3.13' && matrix.os == 'ubuntu-latest'"
