--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,15 +70,27 @@ jobs:
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/checkout@v5
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }} with uv
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-        uses: actions/setup-python@v6
+        uses: astral-sh/setup-uv@v6
         with:
           python-version: ${{ matrix.python-version }}
+          enable-cache: true
 
-      - name: Install Hatch
-        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
-        run: python -m pip install --disable-pip-version-check --upgrade hatch
+      # - name: Set up Python ${{ matrix.python-version }} with uv
+      #   if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+      #   run: uv python install ${{ matrix.python-version }}
+
+      # - name: Set up Python ${{ matrix.python-version }}
+      #   if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+      #   uses: actions/setup-python@v6
+      #   with:
+      #     python-version: ${{ matrix.python-version }}
+
+      # - name: Install Hatch
+      #   if: ${{ env.skipping_build_and_test_replicate != 'true' }}
+      #   run: uv tool install hatch
+      #   # run: python -m pip install --disable-pip-version-check --upgrade hatch
 
       - name: Run tests
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
@@ -86,9 +98,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          hatch run pip install pyopenssl>=24.0.0
-          hatch run python -c 'import ssl; print("openssl: ", ssl.OPENSSL_VERSION_INFO)'
-          hatch run test --durations=0
+          uv run --with hatch hatch run python -c 'import ssl; print("openssl: ", ssl.OPENSSL_VERSION_INFO)'
+          uv run --with hatch hatch run test --durations=0
 
       - name: Upload coverage
         if: "matrix.python-version == '3.13' && matrix.os == 'ubuntu-latest'"
